--- a/styles/download.css
+++ b/styles/download.css
@@ -2,7 +2,7 @@
 .platform {
     display: flex;
     flex-direction: column;
-    background:transparent;
+    background: transparent;
     justify-content:center;
 }
 
@@ -22,6 +22,7 @@
     flex-direction: column;
     gap: 15px;
     padding-top: 10px;
+    margin: 0 auto;
 }
 
 .comments {
@@ -30,7 +31,7 @@
 }
 
 .user-comment {
-    width: clamp(500px, 70%, 900px);
+    width: clamp(200px, 50%, 600px);
     background: var(--secondary);
     padding: 14px;
     border-radius: 10px;
