--- a/styles/download.css
+++ b/styles/download.css
@@ -30,8 +30,10 @@
     gap: 50px;
 }
 
+.comments h3 { padding-left: 20px; }
+
 .user-comment {
-    width: clamp(200px, 50%, 600px);
+    width: clamp(180px, 50%, 580px);
     background: var(--secondary);
     padding: 14px;
     border-radius: 10px;
